# haskell-futurice-prelude

./: .gitignore  .stylish-haskell.yaml  .travis.meta.yml  .travis.yml  LICENSE  README.md  cabal.make-travis-yml  cabal.project  env-postgres-osx.sh  flake.nix  futurice-prelude.cabal  package.yaml  stack-ghc-8.0.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-5.yaml  stack-lts-6.yaml  stack.yaml  upload-docs.sh
.github/workflows/: haskell-ci.yml
src/Futurice/: Aeson.hs  Arbitrary.hs  Clock.hs  Control.hs  CryptoRandom.hs  Exit.hs  Generics.hs  Graph.hs  Has.hs  IdMap.hs  Indexed.hs  IsMaybe.hs  List.hs  Monoid.hs  Orphans.hs  Peano.hs  Postgres.hs  PostgresPool.hs  Prelude.hs  REPL.hs  Reflection.hs  Stricter.hs  Time.hs  TypeTag.hs  UUID.hs
src/Futurice/Constraint/: ForallSymbol.hs  Unit1.hs
src/Futurice/Generics/: Enum.hs  Newtype.hs  SOP.hs  Textual.hs
src/Futurice/Operational/: Sum.hs
src/Futurice/Prelude/: Internal.hs
src/Futurice/Prelude/Internal/: Orphans.hs
src/Futurice/Reflection/: TypeLits.hs
src/Futurice/Time/: Month.hs
test/: Doctests.hs  HasTests.hs  ReflectionTests.hs  Tests.hs
