cabal-version:  2.0
name:           futurice-prelude
version:        1

synopsis:       Futurice Prelude
description:    'Futurice.Prelude' is used in Futurice apps:
                .
                @
                import Prelude ()
                import Futurice.Prelude
                @
category:       Web
homepage:       https://github.com/futurice/haskell-futurice-prelude#readme
bug-reports:    https://github.com/futurice/haskell-futurice-prelude/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD3
license-file:   LICENSE
tested-with:    GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.3
build-type:     Simple

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/futurice/haskell-futurice-prelude

library
  hs-source-dirs:
      src
  default-extensions: DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
      base                  >=4.8      && <4.12
    , aeson                 ^>=1.4
    , aeson-compat          >=0.3.6    && <0.4
    , ansi-pretty           >=0.1.2.1
    , ansi-terminal         ^>=0.8
    , ansi-wl-pprint        >=0.6.7.3  && <0.7
    , array                 >=0.5.1.0  && <0.6
    , async                 ^>=2.2.1
    , attoparsec            >=0.13.1.0 && <0.14
    , base-compat-batteries ^>=0.10.1
    , base-orphans          ==0.7
    , bifunctors
    , binary
    , binary-orphans        ==0.1.8.*
    , binary-tagged         ==0.1.5
    , bytestring
    , case-insensitive      >=1.2.0.7  && <1.3
    , cassava               >=0.5.1.0  && <0.5.2.0
    , clock                 >=0.7.2    && <0.8
    , composition-extra     >=2.0.0    && <2.1
    , comonad               ^>=5.0.3
    , constraints           ^>=0.10
    , containers
    , contravariant         ^>=1.5
    , deepseq               >=1.4.1.1  && <1.5
    , dependent-sum         >=0.3.2.2  && <0.5
    , deriving-compat       ^>= 0.5
    , DRBG                  >=0.5.5    && <0.6
    , exceptions            ^>=0.10
    , extra                 ^>=1.6.2
    , fail
    , fin                   >=0        && <0.1
    , file-embed            ==0.0.10.1
    , file-embed-lzma       ^>=0
    , generics-sop          >=0.3.1.0  && <0.4
    , generics-sop-lens     >=0.1.1.0  && <0.2
    , ghc-prim
    , github                ^>=0.19
    , hashable              >=1.2.4
    , hashable-time         >=0.2      && <0.3
    , http-api-data         >=0.3.1    && <0.4
    , http-client           >=0.5.4    && <0.6
    , http-client-tls       >=0.3.3    && <0.4
    , http-types            ^>=0.12
    , intervals             >=0.8      && <0.9
    , JuicyPixels           >=3.2.8    && <3.3
    , keys                  ^>=3.12
    , lens                  ^>=4.16
    , lifted-base           >=0.2.3.0  && <0.3
    , log-base              >=0.7.4.0  && <0.8
    , lucid                 >=2.9.9    && <2.10
    , mmorph                >=1.0.6    && <1.2
    , monad-control         >=1.0.1.0  && <1.1
    , monad-time            ^>=0.3.1.0
    , monadcryptorandom     >=0.7.2    && <0.7.3
    , mtl                   >=2.2.1    && <2.3
    , nats
    , nf                    >=1.0.1.0  && <1.1
    , parsec                >=3.1.11   && <3.2
    , postgresql-simple     >=0.5.2.1  && <0.6
    , pretty-compact        >=3.0      && <3.1
    , profunctors           >=5.2      && <5.3
    , QuickCheck            ^>=2.11.3
    , quickcheck-instances  ==0.3.18
    , random                >=1.1      && <1.2
    , random-shuffle        ==0.0.4
    , reducers              >=3.12.1   && <3.13
    , resourcet             ^>=1.1.11 || ^>=1.2.1
    , resource-pool         >=0.2.3.2  && <0.3
    , scientific            >=0.3.4.9  && <0.4
    , semigroupoids         >=5.0.1    && <5.3
    , semigroups
    , servant-server        ^>=0.14
    , strict-base-types     ^>=0.6.0
    , swagger2              ^>=2.2.1
    , tagged                >=0.8.4    && <0.9
    , template-haskell
    , text
    , th-lift               >=0.7.7    && <0.8
    , th-lift-instances     >=0.1.11   && <0.2
    , these                 >=0.7.2    && <0.8
    , time                  >=1.5.0.1  && <1.9
    , time-parsers          >=0.1.2.0  && <0.2
    , transformers          >=0.4.2.0  && <0.6
    , transformers-base     >=0.4.4    && <0.5
    , transformers-compat   >=0.5.1.4  && <0.7
    , trifecta              >=1.5.2    && <1.8
    , tz                    >=0.1.2.0  && <0.2
    , unicode-transforms    >=0.3.0    && <0.4
    , unliftio-core         ^>=0.1.1.0
    , unordered-containers  >=0.2.7.1  && <0.3
    , uuid                  >=1.3.12   && <1.4
    , vector                >=0.11.0.0 && <0.13
    , vector-algorithms     >=0.7.0.1  && <0.8
    , vector-instances      >=3.4      && <3.5
    , wai
    , writer-cps-mtl        >=0.1.1.4  && <0.2
    , insert-ordered-containers

  exposed-modules:
      Futurice.Aeson
      Futurice.Arbitrary
      Futurice.Clock
      Futurice.Constraint.ForallSymbol
      Futurice.Constraint.Unit1
      Futurice.Control
      Futurice.CryptoRandom
      Futurice.Exit
      Futurice.Generics
      Futurice.Generics.Enum
      Futurice.Generics.Newtype
      Futurice.Generics.SOP
      Futurice.Graph
      Futurice.Has
      Futurice.IdMap
      Futurice.Indexed
      Futurice.IsMaybe
      Futurice.List
      Futurice.Monoid
      Futurice.Orphans
      Futurice.Peano
      Futurice.Prelude
      Futurice.Prelude.Internal
      Futurice.REPL
      Futurice.Reflection
      Futurice.Reflection.TypeLits
      Futurice.Stricter
      Futurice.Time
      Futurice.Time.Month
      Futurice.TypeTag
      Futurice.UUID
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
      test
  default-extensions: DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveTraversable ScopedTypeVariables
  ghc-options: -Wall
  build-depends:
      base
    , aeson
    , cassava
    , futurice-prelude
    , generics-sop
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , unordered-containers
    , vector
  other-modules:
      HasTests
      ReflectionTests
  default-language: Haskell2010
