cabal-version:      2.2
name:               futurice-prelude
version:            1
synopsis:           Futurice Prelude
description:
  'Futurice.Prelude' is used in Futurice apps:
  .
  @
  import Prelude ()
  import Futurice.Prelude
  @

category:           Web
homepage:           https://github.com/futurice/haskell-futurice-prelude#readme
bug-reports:        https://github.com/futurice/haskell-futurice-prelude/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Toni Okuogume <toni.okuogume@futurice.com>
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        ghc ==8.0.2 ghc ==8.2.2 ghc ==8.4.4 ghc ==8.6.5 ghc ==8.8.1
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-futurice-prelude

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables

  -- https://github.com/haskell-servant/servant/pull/1037
  build-depends:      servant-client-core ^>=0.16
  build-depends:
    , aeson                      ^>=1.4.2.0
    , aeson-compat               ^>=0.3.6
    , ansi-pretty                >=0.1.2.1
    , ansi-terminal              ^>=0.8
    , ansi-wl-pprint             ^>=0.6.7.3
    , array                      ^>=0.5.1.0
    , async                      ^>=2.2.1
    , attoparsec                 ^>=0.13.1.0
    , base                       >=4.9      && <4.14
    , base-compat-batteries      ^>=0.10.4
    , base-orphans               ==0.8.1
    , bifunctors
    , binary
    , binary-orphans             ^>=1.0.1
    , binary-tagged              ^>=0.2
    , bytestring
    , case-insensitive           ^>=1.2.0.7
    , cassava                    ^>=0.5.2.0
    , clock                      ^>=0.7.2
    , comonad                    ^>=5.0.3
    , composition-extra          ^>=2.0.0
    , constraints                ^>=0.10
    , containers
    , contravariant              ^>=1.5
    , deepseq                    ^>=1.4.1.1
    , dependent-sum              >=0.3.2.2  && <0.5
    , deriving-compat            ^>=0.5
    , exceptions                 ^>=0.10
    , extra                      ^>=1.6.2
    , fail
    , fin                        ^>=0.1
    , generics-sop               ^>=0.5.0.0
    , generics-sop-lens          ^>=0.2
    , ghc-prim
    , hashable                   >=1.2.4
    , hashable-time              ^>=0.2
    , http-api-data              ^>=0.4
    , http-types                 ^>=0.12
    , insert-ordered-containers
    , intervals                  ^>=0.8
    , JuicyPixels                ^>=3.3.1
    , keys                       ^>=3.12
    , lens                       ^>=4.18
    , lifted-base                ^>=0.2.3.0
    , log-base                   ^>=0.7.4.0
    , lucid                      ^>=2.9.9
    , mmorph                     >=1.0.6    && <1.2
    , monad-control              ^>=1.0.1.0
    , monad-time                 ^>=0.3.1.0
    , mtl                        ^>=2.2.1
    , nats
    , nf                         ^>=1.0.1.0
    , Only                       ^>=0.1
    , parsec                     ^>=3.1.11
    , pretty-compact             ^>=3.0
    , profunctors                ^>=5.3
    , QuickCheck                 ^>=2.13.1
    , quickcheck-instances       ==0.3.22
    , random                     ^>=1.1
    , random-shuffle             ==0.0.4
    , reducers                   ^>=3.12.1
    , resource-pool              ^>=0.2.3.2
    , resourcet                  ^>=1.1.11 || ^>=1.2.1
    , scientific                 ^>=0.3.4.9
    , semialign                  ^>=1.1
    , semialign-indexed          ^>=1.1
    , semigroupoids              ^>=5.3.1
    , semigroups
    , strict-base-types          ^>=0.6.1
    , tagged                     ^>=0.8.4
    , template-haskell
    , text
    , text-short                 ^>=0.1.2
    , th-lift                    ^>=0.8
    , th-lift-instances          ^>=0.1.11
    , these                      ^>=1.0.0
    , time                       >=1.6 && <2.0
    , time-parsers               ^>=0.1.2.0
    , transformers               >=0.4.2.0  && <0.6
    , transformers-base          ^>=0.4.4
    , transformers-compat        >=0.5.1.4  && <0.7
    , trifecta                   ^>=2.1
    , tz                         ^>=0.1.3.0
    , unliftio-core              ^>=0.1.1.0
    , unordered-containers       ^>=0.2.7.1
    , uuid-types                 ^>=1.0.3
    , vector                     >=0.11.0.0 && <0.13
    , vector-algorithms          ^>=0.8.0.0
    , vector-instances           ^>=3.4
    , writer-cps-mtl             ^>=0.1.1.4

  if impl(ghcjs -any)
    build-depends: primitive <0.6.4

  else
    exposed-modules: Futurice.CryptoRandom
    build-depends:
      , DRBG               ^>=0.5.5
      , file-embed         ==0.0.11
      , file-embed-lzma    ^>=0
      , github             ^>=0.24
      , http-client        ^>=0.5.4
      , http-client-tls    ^>=0.3.3
      , monadcryptorandom  >=0.7.2  && <0.7.3
      , postgresql-simple  ^>=0.6
      , servant-server     ^>=0.16
      , swagger2           ^>=2.5
      , wai

    -- https://github.com/ghcjs/ghcjs/issues/703
    build-depends:   unicode-transforms ^>=0.3.0

  exposed-modules:
    Futurice.Aeson
    Futurice.Arbitrary
    Futurice.Clock
    Futurice.Constraint.ForallSymbol
    Futurice.Constraint.Unit1
    Futurice.Control
    Futurice.Exit
    Futurice.Generics
    Futurice.Generics.Enum
    Futurice.Generics.Newtype
    Futurice.Generics.SOP
    Futurice.Generics.Textual
    Futurice.Graph
    Futurice.Has
    Futurice.IdMap
    Futurice.Indexed
    Futurice.IsMaybe
    Futurice.List
    Futurice.Monoid
    Futurice.Orphans
    Futurice.Peano
    Futurice.Prelude
    Futurice.Prelude.Internal
    Futurice.REPL
    Futurice.Reflection
    Futurice.Reflection.TypeLits
    Futurice.Stricter
    Futurice.Time
    Futurice.Time.Month
    Futurice.TypeTag
    Futurice.UUID

test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  ghc-options:        -Wall
  hs-source-dirs:     test
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables

  build-depends:
    , aeson
    , base
    , cassava
    , futurice-prelude
    , generics-sop
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , unordered-containers
    , vector

  other-modules:
    HasTests
    ReflectionTests
