cabal-version:      2.2
name:               futurice-prelude
version:            1
synopsis:           Futurice Prelude
description:
  'Futurice.Prelude' is used in Futurice apps:
  .
  @
  import Prelude ()
  import Futurice.Prelude
  @

category:           Web
homepage:           https://github.com/futurice/haskell-futurice-prelude#readme
bug-reports:        https://github.com/futurice/haskell-futurice-prelude/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Toni Okuogume <toni.okuogume@futurice.com>
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:
  ghc ==8.8.4 ghc ==8.10.7 ghc ==9.0.2

build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-futurice-prelude

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables

  build-depends:
    , aeson
    , aeson-compat
    , ansi-terminal
    , array
    , async
    , attoparsec
    , base < 4.17
    , base-compat-batteries
    , base-orphans
    , bifunctors
    , binary
    , binary-orphans
    , binary-tagged
    , bytestring
    , case-insensitive
    , cassava
    , clock
    , comonad
    , composition-extra
    , constraints
    , containers
    , contravariant
    , deepseq
    , dependent-sum
    , deriving-compat
    , exceptions
    , extra
    , fail
    , fin
    , generics-sop
    , generics-sop-lens
    , ghc-prim
    , hashable
    , hashable-time
    , http-api-data
    , http-types
    , insert-ordered-containers
    , intervals
    , JuicyPixels
    , keys
    , lens
    , lifted-base
    , log-base
    , lucid
    , mmorph
    , monad-control
    , monad-time
    , mtl
    , nats
    , nf
    , Only
    , parsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , profunctors
    , QuickCheck
    , quickcheck-instances
    , random
    , random-shuffle
    , reducers
    , resource-pool
    , resourcet
    , scientific
    , semialign
    , semialign-indexed
    , semigroupoids
    , semigroups
    , servant-client-core
    , strict
    , tagged
    , template-haskell
    , text
    , text-short
    , th-lift
    , th-lift-instances
    , these
    , time
    , time-parsers
    , transformers
    , transformers-base
    , transformers-compat
    , trifecta
    , tz
    , unordered-containers
    , uuid-types
    , vector
    , vector-algorithms
    , vector-instances
    , writer-cps-mtl

  if impl(ghcjs -any)
    build-depends: primitive <0.6.4

  else
    exposed-modules: Futurice.CryptoRandom
    build-depends:
      , DRBG
      , file-embed
      , file-embed-lzma
      , github
      , http-client
      , http-client-tls
      , monadcryptorandom
      , postgresql-simple
      , servant-server
      , swagger2
      , unicode-transforms
      , wai

  exposed-modules:
    Futurice.Aeson
    Futurice.Arbitrary
    Futurice.Clock
    Futurice.Constraint.ForallSymbol
    Futurice.Constraint.Unit1
    Futurice.Control
    Futurice.Exit
    Futurice.Generics
    Futurice.Generics.Enum
    Futurice.Generics.Newtype
    Futurice.Generics.SOP
    Futurice.Generics.Textual
    Futurice.Graph
    Futurice.Has
    Futurice.IdMap
    Futurice.Indexed
    Futurice.IsMaybe
    Futurice.List
    Futurice.Monoid
    Futurice.Orphans
    Futurice.Peano
    Futurice.Prelude
    Futurice.Prelude.Internal
    Futurice.REPL
    Futurice.Reflection
    Futurice.Reflection.TypeLits
    Futurice.Stricter
    Futurice.Time
    Futurice.Time.Month
    Futurice.TypeTag
    Futurice.UUID

test-suite tests
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  ghc-options:        -Wall
  hs-source-dirs:     test
  default-extensions:
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    ScopedTypeVariables

  build-depends:
    , aeson
    , base
    , cassava
    , futurice-prelude
    , generics-sop
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , unordered-containers
    , vector

  other-modules:
    HasTests
    ReflectionTests
